[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "add-missing-init"
version = "0.0.16"
description = "Add a __init__.py file to each directory containing python source code."
authors = ["Julien Lajugie"]
readme = "README.md"
repository = "https://github.com/JulienLajugie/add-missing-init"
keywords = [
    "add-missing-init",
    "__init__.py"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "*"
mypy = "*"
check-manifest = "*"

[tool.poetry.scripts]
add-missing-init = "add_missing_init:main"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
fail-under = 85
verbose = 1
quiet = false
whitelist-regex = []
color = true
